# elastic_isotropic_operators

./: .gitignore  .gitmodules  LICENSE  README.md
elastic_iso_lib/: CMakeLists.txt  LICENSE
elastic_iso_lib/elastic_iso_double/: CMakeLists.txt
elastic_iso_lib/elastic_iso_double/prop/: CMakeLists.txt
elastic_iso_lib/elastic_iso_double/prop/include/: BornElasticGpu.h  BornElasticGpuFunctions.h  BornElasticShotsGpu.h  fdParamElastic.h  interpTimeLinTbb.h  nonlinearPropElasticGpu.h  nonlinearPropElasticGpuFunctions.h  nonlinearPropElasticShotsGpu.h  secondTimeDerivative.h  seismicElasticOperator2D.cpp  seismicElasticOperator2D.h  spaceInterpGpu.h  spaceInterpGpuNew.h  stagger.h  varDeclare.h
elastic_iso_lib/elastic_iso_double/prop/src/: BornElasticGpu.cpp  BornElasticGpuFunctions.cu  BornElasticShotsGpu.cpp  fdParamElastic.cpp  interpTimeLinTbb.cpp  kernelsGpuElastic.cu  nonlinearPropElasticGpu.cpp  nonlinearPropElasticGpuFunctions.cu  nonlinearPropElasticShotsGpu.cpp  nonlinearPropElasticShotsGpuMain.cpp  padElasticFileGpuMain.cpp  secondTimeDerivative.cpp  spaceInterpGpu.cpp  spaceInterpGpuNew.cpp  stagger.cpp
elastic_iso_lib/elastic_iso_double/wave/: CMakeLists.txt
elastic_iso_lib/elastic_iso_double/wave/include/: SP.h  fdParamElasticWaveEquation.h  operator.h  padTruncateSource.h  spaceInterpMulti.h  staggerWfld.h  varDeclareWaveEquation.h  waveEquationElasticGpu.h  waveEquationElasticGpuFunctions.h
elastic_iso_lib/elastic_iso_double/wave/src/: SP.cpp  fdParamElasticWaveEquation.cpp  kernelsGpuWaveEquationElastic.cu  padTruncateSource.cpp  spaceInterpMulti.cpp  staggerWfld.cpp  waveEquationElasticGpu.cpp  waveEquationElasticGpuFunctions.cu
elastic_iso_lib/elastic_iso_float/: CMakeLists.txt
elastic_iso_lib/elastic_iso_float/prop/: CMakeLists.txt
elastic_iso_lib/elastic_iso_float/prop/include/: BornElasticGpu.h  BornElasticGpuFunctions.h  BornElasticShotsGpu.h  fdParamElastic.h  interpTimeLinTbb.h  nonlinearPropElasticGpu.h  nonlinearPropElasticGpuFunctions.h  nonlinearPropElasticShotsGpu.h  operator.h  secondTimeDerivative.h  seismicElasticOperator2D.cpp  seismicElasticOperator2D.h  spaceInterpGpu.h  spaceInterpGpuNew.h  stagger.h  varDeclare.h
elastic_iso_lib/elastic_iso_float/prop/src/: BornElasticGpu.cpp  BornElasticGpuFunctions.cu  BornElasticShotsGpu.cpp  cudaErrors.cu  fdParamElastic.cpp  interpTimeLinTbb.cpp  kernelsGpuElastic.cu  nonlinearPropElasticGpu.cpp  nonlinearPropElasticGpuFunctions.cu  nonlinearPropElasticShotsGpu.cpp  nonlinearPropElasticShotsGpuMain.cpp  secondTimeDerivative.cpp  spaceInterpGpu.cpp  spaceInterpGpuNew.cpp  stagger.cpp
elastic_iso_lib/elastic_iso_float/wave/: CMakeLists.txt
elastic_iso_lib/elastic_iso_float/wave/include/: SP.h  cosTaperWfld.h  fdParamElasticWaveEquation.h  padTruncateSource.h  spaceInterpMulti.h  staggerWfld.h  varDeclareWaveEquation.h  waveEquationElasticGpu.h  waveEquationElasticGpuFunctions.h  waveEquationElasticGradioGpu.h
elastic_iso_lib/elastic_iso_float/wave/src/: SP.cpp  cosTaperWfld.cpp  fdParamElasticWaveEquation.cpp  kernelsGpuWaveEquationElastic.cu  padTruncateSource.cpp  spaceInterpMulti.cpp  staggerWfld.cpp  waveEquationElasticGpu.cpp  waveEquationElasticGpuFunctions.cu
elastic_iso_lib/notebooks/: EFWI_test.p  Elastic FWI example.ipynb  MarmVpVsRho.H  Nonlinear.ipynb  parMarmousi.p  smooth_layers.H  smooth_layers.H@  true_layers.H  true_layers.H@
elastic_iso_lib/python/python_double/: BornPythonElasticDoubleMain.py  CMakeLists.txt  Elastic_iso_double_nl.py  Elastic_iso_double_prop.py  Elastic_iso_double_we.py  PadTruncateSourceDouble.py  SP_Double.py  SpaceInterpMultiDouble.py  StaggerDouble.py  freeSurfMat.py  nonlinearPythonElasticDoubleMain.py  pyElastic_iso_double_born.cpp  pyElastic_iso_double_nl.cpp  pyPadTruncateSourceDouble.cpp  pySP_Double.cpp  pySpaceInterpMultiDouble.cpp  pyStaggerDouble.cpp  waveEquationPythonElasticDoubleMain.py  waveReconMainDouble.py  wriUtilDouble.py
elastic_iso_lib/python/python_float/: BornPythonElasticFloatMain.py  CMakeLists.txt  CosTaperWfldFloat.py  Elastic_iso_double_we.py  Elastic_iso_float_nl.py  Elastic_iso_float_prop.py  Elastic_iso_float_we.py  PadTruncateSourceDouble.py  PadTruncateSourceFloat.py  SP_Float.py  SpaceInterpMultiFloat.py  StaggerDouble.py  StaggerFloat.py  efwiMain.py  forcingTermOpsTest.py  inversionUtils.py  nonlinearPythonElasticFloatMain.py  nonlinearPythonElasticFloatSourceEstMain.py  priorTest.py  pyCosTaperWfld.cpp  pyElastic_iso_double_we.cpp  pyElastic_iso_float_born.cpp  pyElastic_iso_float_nl.cpp  pyElastic_iso_float_we.cpp  pyPadTruncateSourceFloat.cpp  pySP_Float.cpp  pySpaceInterpMultiFloat.cpp  pyStaggerFloat.cpp  waveEqInvFloat.py  waveEquationPythonElasticFloatMain.py  waveReconMainFloat.py  waveletFloatMain.py  wriUtilDouble.py  wriUtilFloat.py
elastic_iso_lib/seis_utils/python/: CMakeLists.txt  dataCompMain.py  dataCompModule.py  elasticParamConvertMain.py  elasticParamConvertModule.py  padElasticFileGpuMain.py
elastic_iso_lib/seis_utils/seis_utils_double/: CMakeLists.txt
elastic_iso_lib/seis_utils/seis_utils_float/: CMakeLists.txt
elastic_iso_lib/seis_utils/seis_utils_float/src/: padElasticFileGpuMain.cpp  padElasticWfldGpuMain.cpp
module/: EGS_ela2d  EGSlib
